pages/base/base.css
/* ... */
.shutter .blade-neg {
	width: 100px;
	height: 1px;
	background: #fff;
	background-image: -webkit-gradient(linear, left top, left bottom, from(#777), to(#eee));
	background-image: -webkit-linear-gradient(#777, #eee);
	background-image: -moz-linear-gradient(#777, #eee);
	background-image: -ms-linear-gradient(#777, #eee);
	background-image: -o-linear-gradient(#777, #eee);
	background-image: linear-gradient(#777, #eee);
}

.shutter .control {
	position: absolute;
	top: 0;
	width: 100px;
	height: 180px;
	cursor: pointer;
}

.shutter .control .icon {
	width: 32px;
	height: 32px;
}

.shutter .control .pos {
	position: absolute;
	left: 0;
	bottom: 0;
}

.shutter .control .separator {
	position: absolute;
	left: 50px;
	height: 180px;
	border: 1px none #999;
	border-left-style: dotted;
}

.shutter .control .angle {
	position: absolute;
	right: 0;
	bottom: 0;
}

.colordisc span {
	display: inline-block;
	vertical-align: middle;
	margin: 0 7px 0 7px;
	width: 30px;
	height: 30px;
	border: 2px solid #fff;
	background-color: #333;
	-moz-border-radius: .5em;
	-webkit-border-radius: .5em;
	border-radius: .5em;
}

.rgb-popup div {
	width: 24px;
	height: 24px;
	margin: 0 1px 1px 0;
	float: left;
}

.rgb-popup br {
	clear: left;
}


.tank {
	position: relative;
	display: inline-block;
	vertical-align: bottom;
	margin: 0 7px 0 7px;
	width: 30px;
	height: 180px;
	border: 2px solid #fff;
	background: url('pics/scale_gamut.png') no-repeat right;
	-moz-border-radius: .5em;
	-webkit-border-radius: .5em;
	border-radius: .5em;
}

.tank div {
	position: absolute;
	bottom: 0;
	width: inherit;
	height: 50%;
	background-color: #999;
	-moz-border-radius: 0.1em 0.1em 0.3em 0.3em;
	-webkit-border-radius: 0.1em 0.1em 0.3em 0.3em;
	border-radius: 0.1em 0.1em 0.3em 0.3em;
	opacity: 0.85;
	filter: alpha(opacity=85);
}

/**
 * --- W i d g e t s :   C A L E N D A R  &  P H O N E ------------------------
 */
.calendarlist h2,
.phonelist h2 {
	font-size: 12pt;
	margin-bottom: 4px;
}

.calendarlist ul,
.phonelist ul {
	margin: 0 !important;
}

.calendarlist li,
.phonelist li {
	padding: 0 !important;
	height: 50px;
}

.calendarlist a,
.phonelist a {
	padding: 0 10px 0 64px !important;
	height: 50px;
}

.calendarlist .ui-listview .ui-li-has-thumb > .ui-btn > .icon,
.phonelist .ui-listview .ui-li-has-thumb > .ui-btn > .icon {
	padding: 0 !important;
	margin: 0 !important;
	width: 48px;
	height: 48px;
	top: 1px !important;
	left: 1px !important;
}

.calendarlist .ui-listview>li h3,
.phonelist .ui-listview>li h3 {
	margin: 6px 0;
}

.calendarlist p,
.phonelist p {
	margin: -0.4em 0 !important;
}

/* Calendar only */
.calendarlist .color {
	position: absolute;
	left: 50px;
	top: 0;
	width: 6px;
	height: 48px;
}

/* Phone only */
.phonelist .dir {
	position: absolute;
	padding: 0 !important;
	left: 38px;
	top: 15px;
	width: 24px;
	height: 24px;
}

/**
 * --- W i d g e t s :   D E V I C E ------------------------------------------
 */
.dimmer {
	vertical-align: middle;
	height: 48px;
	margin: 15px 0 10px 0;
}

.dimmer .switch {
	padding-left: 0;
	float: left;
}

.dimmer .icon,
.dimmer .fx-icon {
	width: 48px;
	height: 48px;
}

.dimmer p {
	margin: 0;
	padding: 0;
}

.dimmer .ui-slider {
	margin-left: 48px;
}
.dimmer .ui-slider-track {
	margin-left: 0px;
}

.codepad {
	display: inline-block;
	border: 1px dotted #888;
	border-radius: 1em;
	-moz-border-radius: 1em;
	-webkit-border-radius: 1em;
	background-color: rgba(120, 120, 120, 0.3);
}

.rtr .actual {
	padding: 5px 0 5px 5px;
	width: 200px;
	margin: auto;
}

.rtr .actual .temp {
	margin: 5px 0 5px 0;
	font-size: 1.4em;
	font-weight: bold;
}

.rtr .set {
	padding: 5px 0 5px 50px;
	width: 200px;
	height: 48px;
	margin: auto;
}

.rtr .set .temp {
	width: 80px;
	height: 48px;
	padding-top: 10px;
	float: left;
}

.rtr .set .ui-btn {
	float: left;
}

.rtr .control {
	padding: 5px 0 5px 0;
	width: 220px;
	height: 48px;
	margin: auto;
}

.rtr .control .switch {
	margin: 2px;
	float: left;
}

.blind .pos {
	width: 50px;
}

.blind .pos div.ui-slider-vertical {
	margin: 0 2% 0 10px;
}

.blind .pos .ui-slider .ui-slider-input {
	display: none !important;
}

.blind .angle .ui-slider .ui-slider-input {
	display: none !important;
}

.uzsuPopupContent{
	width: 100%;
	height: 100%;
}
.uzsuPopupHeader{
	font-size: 2em;
	text-align: center;
	margin-bottom: 1.2em;
}
.uzsuRow{
	clear: both;
	height: 3.8em;
}
.uzsuRowExpert, .uzsuRowHoliday, .uzsuRowCondition, .uzsuRowDelayedExec{
	height: 3.8em;
	border: 1px dotted;
	margin: 0 0.6em 1.2em 1.2em;
}
.uzsuRowExpHoli:after{
	clear: both;
	content: " ";
	display: block;
	height: 0;
}
.uzsuRowExpertText, .uzsuRowHolidayText, .uzsuRowConditionText, .uzsuRowDelayedExecText{
	height: 0em;
	font-size: 0.7em;
	position: relative;
	top: 5em;
	left: -1.5em;
	transform: rotate(270deg);
	transform-origin: 0 0;
}
.uzsuRowFooter{
	clear: both;
	height: 3.8em;
	margin-top: 1.2em;
}
.uzsuCell, .uzsuCellExpert{
	float: left;
	height: 3.1em;
	margin: 0.2em;
}
.uzsuCellType1{
	float: left;
	height: 5em;
	margin: 0.2em;
}
.uzsuCellText{
	height: 0.8em;
	font-size: 0.7em;
}
.uzsuClear:after{
	content: "";
	clear: both;
	display: table;
}
.uzsuTimeInput, .uzsuTimeMaxMinInput, .uzsuTimeOffsetInput, .uzsuValueInput{
	width: 6ex !important;
	padding: 0.1em !important;
}
.uzsuTimeInput::-webkit-inner-spin-button,
.uzsuTimeMaxMinInput::-webkit-inner-spin-button,
.uzsuTimeOffsetInput::-webkit-inner-spin-button,
.uzsuValueInput::-webkit-inner-spin-button,
.uzsuTimeInput::-webkit-outer-spin-button,
.uzsuTimeMaxMinInput::-webkit-outer-spin-button,
.uzsuTimeOffsetInput::-webkit-outer-spin-button,
.uzsuValueInput::-webkit-outer-spin-button,
.uzsuTimeInput::-webkit-clear-button,
.uzsuTimeMaxMinInput::-webkit-clear-button,
.uzsuTimeOffsetInput::-webkit-clear-button,
.uzsuValueInput::-webkit-clear-button{
	-webkit-appearance: none;
	display: none;
}
.uzsuConditionValueInput, .uzsuDelayedExecValueInput{
	width: 70px !important;
	padding: 0.1em !important;
}
/* ... */

